--- a/20170704/Newspaper_Clone/app/views/shared/_main_nav.html.erb
+++ b/20170704/Newspaper_Clone/app/views/shared/_main_nav.html.erb
@@ -11,4 +11,18 @@
 			</li>
 		</ul>
 	</nav>
+	<nav class="right-nav">
+		<ul>
+			<li>
+				<button>Subscribe Now!</button>
+			</li>
+			<li>
+				<button>Log In</button>
+			</li>
+			<li id="gear-dropdown-btn">
+				<i class="fa fa-gear"></i>
+				<%= render partial: 'shared/gear_dropdown' %>
+			</li>
+		</ul>
+	</nav>
 </header>
