Add, style gear dropdown

--- a/20170704/Newspaper_Clone/app/assets/stylesheets/base/layout.scss
+++ b/20170704/Newspaper_Clone/app/assets/stylesheets/base/layout.scss
@@ -31,6 +31,13 @@ button:hover {
 	border-color: $darkest-blue;
 }
 
+a:hover {
+	text-decoration: underline;
+}
+
+.hidden {
+	display: none;
+}
 /*
 	Header Rules
 */
