--- a/20170704/Newspaper_Clone/app/assets/stylesheets/base/layout.scss
+++ b/20170704/Newspaper_Clone/app/assets/stylesheets/base/layout.scss
@@ -38,6 +38,38 @@ a:hover {
 .hidden {
 	display: none;
 }
+
+/*
+	Font Elements
+*/
+
+h1 {
+	font-size: 24px;
+	font-style: italic;
+	font-weight: bold;
+}
+
+h2 {
+	text-align: center;
+	margin-bottom: 10px;
+	font-weight: bold;
+}
+
+p {
+	line-height: 16px;
+}
+
+img {
+	width: 100%;
+	height: 100%;
+}
+
+small {
+	font-size: 9px;
+	color: $gray;
+	font-family: $sans-serif;
+}
+
 /*
 	Header Rules
 */
@@ -56,4 +88,44 @@ hr {
 .hr-top {
 	height: 2px;
 	margin-bottom: 1px;
+}
+
+/*
+	Images
+*/
+
+.thumbnail {
+	height: 100px;
+}
+
+.thumbnail img {
+	object-fit: cover;
+}
+
+/*
+	Inputs
+*/
+
+.input-wrapper {
+	display: flex;
+	margin: 5px 0;
+}
+
+.input-wrapper input {
+	flex: 1;
+	font-family: $sans-serif;
+	padding: 0 10px;
+	border: 1px solid $gray;
+	border-right: none;
+	border-top-right-radius: 0;
+	border-bottom-right-radius: 0;
+}
+
+.input-wrapper button {
+	border-top-left-radius: 0;
+	border-bottom-left-radius: 0;
+}
+
+input[type="search"] {
+	padding: 5px;
 }
