--- a/20170810/css_selectors/assets/advanced_selectors.css
+++ b/20170810/css_selectors/assets/advanced_selectors.css
@@ -43,4 +43,37 @@ ol {
   font-weight: bold;
 }
 
+input[type="radio"] {
+  -webkit-appearance: none;
+  width: 27px;
+  height: 27px;
+  background-image: url(./stars.png);
+  vertical-align: bottom;
+}
 
+
+input[type="radio"]:checked {
+  background-position: 30px 30px;
+}
+
+
+input:last-child {
+  background: gold;
+}
+
+input:last-child:hover {
+  filter: brightness(90%);
+}
+
+ol li:nth-of-type(2n) {
+  background-color: whitesmoke;
+}
+
+input[type="radio"], select, input[type="submit"] {
+  cursor: pointer;
+  outline: none;
+}
+
+h2 + .user_review {
+  border-top: 1px solid black;
+}
