--- a/JavaScript30/24 - Sticky Nav/style-START.css
+++ b/JavaScript30/24 - Sticky Nav/style-START.css
@@ -48,6 +48,10 @@ nav {
   z-index: 1;
 }
 
+body.fixed-nav nav {
+  position: fixed;
+}
+
 nav ul {
   margin: 0;
   padding:0;
@@ -74,6 +78,10 @@ li.logo {
 
 li.logo a {
   color:black;
+}
+
+.fixed-nav li.logo {
+  max-width: 500px;
 }
 
 nav a {
